lessons/066-kubernetes-network-policy-examples-tutorial-eks-calico-isolate-namespaces-pods-ip-blocks/examples/0-default-deny-all.yaml
  
# You can create a "default" policy for a namespace which prevents all ingress 
# AND egress traffic by creating the following NetworkPolicy in that namespace.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
