lessons/066-kubernetes-network-policy-examples-tutorial-eks-calico-isolate-namespaces-pods-ip-blocks/examples/2-default-deny-ingress.yaml
# Default deny all ingress traffic
# You can create a "default" isolation policy for a namespace by creating a NetworkPolicy 
# that selects all pods but does not allow any ingress traffic to those pods.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: production
spec:
  podSelector: {}
  policyTypes:
  - Ingress
